[build-system]

requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"
# Replace previous two lines with the following two lines for Nuitka wheel builds.
# requires = ["nuitka", "setuptools >= 42", "setuptools_scm", "toml", "wheel"]
# build-backend = "nuitka.distutils.Build"

[project]
name = "pvfit"
description = "PVfit: Photovoltaic (PV) Device Performance Measurement and Modeling"
authors = [{name = "Mark Campanelli", email = "mark.campanelli@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
classifiers =[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["PV", "measurement", "modeling", "photovoltaic", "simulation", "solar"]
dynamic = ["version"]

dependencies = [
    "numpy >=1.17.3, <2",
    "scipy >=1.5, <2",
]

[project.optional-dependencies]
dev = [
    "build >=1.2.1, <2",
    "black >=24, <25",
    "check-manifest >=0.49, <0.50",
    "pylint >=2, <3",
]
demo = [
    "matplotlib >=3, <3.8",  # Upper limit to avoid prop_cycler issue.
    "pandas >=2, <3",
    "pvlib >=0.10.3, <0.11",
]
docs = [
    "sphinx >=4, <5",
    "sphinx_rtd_theme >=1, <2",
]
test = [
    # ivcurves is not currently tagged, so fix a commit to main branch. Do this manually due to PyPI issue.
    # "ivcurves @ git+https://github.com/cwhanse/ivcurves@7ae47284b23cfff167932b8cccae53c10ebf9bf9",
    "pandas >=2, <3",
    "pytest >=7, <8",
    "pytest-cov >=4, <5",
]

[project.urls]
Source = "https://github.com/markcampanelli/pvfit"
BugReports = "https://github.com/markcampanelli/pvfit/issues"
Developer = "https://intelligentmeasurementsystems.com"
Discussions = "https://github.com/markcampanelli/pvfit/discussions"
PullRequests = "https://github.com/markcampanelli/pvfit/pulls"
WebApplication = "https://pvfit.app"

[tool.setuptools.packages.find]
include = ["pvfit"]

[tool.setuptools_scm]

[tool.pylint]
max-line-length = 88  # Compatible with default black config.
recursive = true
ignore = ["build"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
omit = ["*_test.py"]
