[metadata]
name = pvfit
description = PVfit: Photovoltaic (PV) Device Performance Measurement and Modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markcampanelli/pvfit
download_url = git+https://github.com/markcampanelli/pvfit#egg=pvfit[demo]
project_urls =
    Bug Reports=https://github.com/markcampanelli/pvfit/issues
    Developer=https://intelligentmeasurementsystems.com
    Discussions=https://github.com/markcampanelli/pvfit/discussions
    Pull Requests=https://github.com/markcampanelli/pvfit/pulls
    Source=https://github.com/markcampanelli/pvfit
    Web Application=https://pvfit.app
license = MIT License
license_files = LICENSE
author = Mark Campanelli
author_email = mark.campanelli@gmail.com
maintainer = Mark Campanelli
maintainer_email = mark.campanelli@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords=PV, measurement, modeling, photovoltaic, simulation, solar

[options]
python_requires = >=3.8, <3.11

install_requires =
    numpy >=1.17.3, <2
    scipy >=1.5, <2

packages = find:

[options.extras_require]
build =
    build ~=0.8.0
    nuitka ~=0.8.4
    setuptools ~=62.3  # Should match pyproject.toml
    wheel ~=0.37.1

demo =
    matplotlib >=3, <4
    pandas >=1, <2
    requests >=2, <3

dev =
    black >=22, <23
    check-manifest >=0.48, <1
    flake8 >=4, <5

docs =
    sphinx >=4.5, <5
    sphinx_rtd_theme >=1, <2

test =
    pytest >=7, <8
    pytest-cov >=3, <4

[flake8]
# Compatible with default black config.
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501
